# Achemi

./: .coverage  README.md  config.py  main.py  pyproject.toml  services.py
SQLalchemy/: CRUD.py  create db.py  fill_task.py  models.py
parser/: parser.py
telegram/: commands.py  telegram_bot.py
tests/: test_parser.py  test_sqlalchemy.py  test_telegram_commands.py
